fix(interface): :lipstick: fix scrollbar hover colour matching background colour

--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -185,6 +185,11 @@ textarea {
 	transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+input::-webkit-scrollbar-thumb:hover,
+textarea::-webkit-scrollbar-thumb:hover {
+	background-color: var(--background);
+}
+
 input.missing-required,
 textarea.missing-required {
 	box-shadow: 0 0 0 0.2rem rgb(255 0 0 / 25%);
